# git-explorer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: faq.html  getting-started.html  index.html  keyboard-shortcuts.html  styles.css
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/commands/: branches.rs  commits.rs  config.rs  helpers.rs  mod.rs  remote.rs  scan.rs  staging.rs  stash.rs  status.rs  types.rs
src-tauri/tests/: integration.rs
src/lib/: theme.ts  types.ts
src/lib/components/: ChangedFiles.svelte  CommitDialog.svelte  DiffViewer.svelte  FolderTree.svelte  RepoDetail.svelte  SearchBar.svelte  Toast.svelte
