[package]
name = "git-explorer"
version = "0.1.0"
edition = "2021"

[lib]
name = "git_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
walkdir = "2"
dirs = "6"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
libc = "0.2"
